package com.example.simpleconverter.android

interface PremiumFeatures {
    val isPremium: Boolean
}